--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -6,14 +6,14 @@ track a target, and the distance measurement will be used to accurately use the
 formula for projectile motion described in \autoref{ProjMotion} to hit the
 target.
 
-\subsection{Colour Camera}
+\subsection{Colour Camera}\label{SensTheoCam}
 For the purpose of identifying and tracking a target, the developed turret will
 make use of a specialized camera, which is capable of identifying coloured
 objects. In order to use the camera, the user specifies a colour of choice,
 which will then be searched for. When the camera registers an object of this
 colour, it will build a datalogical representation of the object consisting of a
 number of rectangles. Such a representation can be seen in
-\autoref{TwoBlops2.PNG}.
+\autoref{TwoBlops2.PNG}. 
 
 \figx[0.70]{TwoBlobs2.PNG}{Visual representation of what the camera senses.}
 
@@ -30,7 +30,7 @@ Below are the technical specifications\citep[p. 1]{NXTCam} for the camera.
   bounding box coordinates of these objects.
 \end{itemize}
 
-\subsection{Ultrasonic Sensor}
+\subsection{Ultrasonic Sensor}\label{SensTheoUltra}
 For the purpose of measuring the distance to the chosen target, the turret will
 make use of two ultrasonic sensors. These sensors work by producing sound waves
 from one of two frontal holes, which is then bounced back by an object and
