- Fixed table macro

--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -281,7 +281,7 @@ every first column/.style={
 column type/.add={|}{}},
 every column/.style={
 column type/.add={}{|}
-}]{data/#1.dat}
+},string type]{data/#1.dat}
 \caption{#2}
 \label{table:#3}
 \end{table}
