--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -9,3 +9,8 @@ sensors which will be used throughout this project.
 
 \input{sections/Sensors/sensorTheory.tex} 
 \input{sections/Sensors/SensorTest.tex}
+
+% \input{sections/Sensors/SensorUltrasonicTheory.tex}
+% \input{sections/Sensors/SensorUltrasonicTest.tex}
+% \input{sections/Sensors/SensorCameraTheory.tex}
+% \input{sections/Sensors/SensorCameraTest.tex}
