--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -170,13 +170,13 @@ seen in \autoref{table:CamTest3}.
 The data presented in \autoref{table:CamTest3} represents the camera's ability
 to recognize the target at different distances, but during the testing a major
 flaw was identified. It was found that the the measured colour of the target
-changes based on its distance from the target, and the light levels at its
+changes based on its distance from the turret and the light levels at its
 current location. In effect this means that no single colour can be used to
 recognize the target at all distances, but instead multiple colours need to be
-recognized based on the distance of the target. This problem has two identified
+recognized based on the distance to the target. This problem has two identified
 solutions, either the camera is programmed to recognize a number of different
 shades of orange, or the turret will be limited to only operate in well and
-consistently lit areas. The solution to this problem will be further explained
+consistently lit areas. The solution to this problem will be further explored
 as part of the final implementation in \autoref{}.
 
 % several parts, these parts will heavily rely
