--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -13,7 +13,7 @@ objects. In order to use the camera, the user specifies a colour of choice,
 which will then be searched for. When the camera registers an object of this
 colour, it will build a datalogical representation of the object consisting of a
 number of rectangles. Such a representation can be seen in
-\autoref{TwoBlops2.PNG}. 
+\autoref{TwoBlobs2.PNG}. 
 
 \figx[0.70]{TwoBlobs2.PNG}{Visual representation of what the camera senses.}
 
