Updated ideal scenario and changed MI/RTS courses to fields Added the MI-book

--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -14,6 +14,15 @@
   publisher={Systime}
 }
 
+@book{MIBook,
+  title={Artificial Intelligence: Foundations of Computational Agents},
+  author={David L. Pool, Alan K. Mackworth},
+  isbn={9780511729461},
+  url={http://artint.info},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+
 @book{daintith2008dictionary,
   title={A Dictionary of Computing},
   author={Daintith, J. and Wright, E.},
