--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -2,22 +2,15 @@
 Computers have become an integral part of modern society, not just as personal
 computers or server stations, but also in the most minute of electronic devices
 like kitchen appliances and radiator thermostats. This entire class of minute
-computers surrounding us in much greater numbers, although their presence is a
-lot more incognito. These computers are built into larger electronic devices.
-This class of computer systems is also known as Embedded Systems.\nl
+computers surrounds us in much greater numbers than ever before, although their
+presence is a lot more incognito. These computers are built into larger
+electronic devices. This class of computer systems is also known as Embedded
+Systems.\nl
 
 The theme of this semester is Embedded systems. This means that the focus of
 the project will be working with a set of constraints that must be balanced.
 Furthermore the project should include techniques from the machine intelligence
 course and the real-time systems course.
-
-% Computers are an integral part of modern society, they are used in everything
-% from assemblyline factories to kitchen appliances. More and more they are being
-% used in daily life, without even being noticed. A computer now covers much more
-% than just a desktop, laptop, tablet or a server. There is an entire class of
-% computers surrounding us in much greater numbers, although their presence is a
-% lot more incognito. These computers are built into larger electronic devices.
-% This class of computer systems is also known as Embedded Systems.
 
 \section{Initial Problem}
 A recurring project proposal idea is a challenge proposed by the semester coordinator Ren\'e
@@ -47,21 +40,10 @@ constraint, that the turret should be able to calculate where the target will be
 when the projectile reaches it, and be able to use this information to
 accurately hit the target while in motion. This challenge results in the initial
 problem:
-% Based on desire to learn from the experience, as well as the reason ``shooting
-% stuff is fun'', it was decided to work with this project. This produces the
-% question:\nl
 
-% One of the project proposals was a challenge by the semester coordinator Ren\'e
-% Hansen to build an autonomous turret that is capable of hitting a moving target.
-% Based on desire to learn from the experience, as well as the reason ``shooting
-% stuff is fun'', it was decided to work with this project. This produces the
-% question:\nl
 \begin{center}
 \begin{minipage}{0.8\linewidth}
 \textit{How can an autonomous turret be designed and constructed such that it is
-capable of hitting a target in motion without the use of user-input.}
+capable of hitting a target.}
 \end{minipage}
 \end{center}
-
-% \textit{Is it possible to construct an embedded system that is able to fire and
-% hit a target in motion without user-input?}
