- Added picture  - Added picture to problem domain

--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -40,6 +40,7 @@ The turret stops sensing the target and start scanning the area again.
 }
 \end{center}
 
+\figx[0.45]{richPic}{\fix{Rich picture}{Need better text}}
 
 \section{Phases}
 Based on the ideal scenario three distrinct phases are identified,
