- Added fun macro

--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -308,6 +308,16 @@ column type/.add={}{|}
 \newcommand{\ap}[1]{\addplot table {data/#1.dat};}
 \newcommand{\al}[1]{\addlegendentry{#1}}
 
+\newcommand{\michael}[1]{%
+\begin{itemize}
+  \forcsvlist{\mc}{#1}
+\end{itemize}
+}
+
+\newcommand{\mc}[1]{\item #1}
+
+
+
 \newcounter{def}
 \renewcommand{\thedef}{definition \thechapter.\arabic{def}}
 \newenvironment{defi}[1]{%
