--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -1,34 +1,28 @@
 \section{Real-Time Systems}
-Although the project group does not have any members following the RTS course,
-the project still incorporates certain elements from RTS. In this section a
-quick overview of the elements will be described in order to provide a basic
+Although the project group does not have any members following the Real-Time
+Systems (RTS) course, the project still incorporates certain elements from RTS.
+In this section a quick overview of the elements will be described in order to provide a basic
 understanding in relation to the project.
 
-\subsection{Introduction}
 In order to give a proper foundation of the core concepts in the field of RTS,
-we will give our definition of real time systems. We define a real time system
-as follows: \say{A real time system is any information processing system, which
-needs to react within a finite time period to externally generated inputs.
-Within real time systems there are two important distinctions, namely hard- and soft real
-time systems. A hard real time system is a system where it is critical to meet
-deadlines, whereas a soft real time system it is not.} \nl
+we will give our definition of real time systems. \nl
 
-At its most basic, RTS systems are systems where the timing of specific
-parts are a vital factor. Consider the example of an ABS-brake again - the
-system needs an input i.e. a sensor input from the wheels. This information is
-then used to calculate the correct amount of pressure to apply to the brakes in
-order to optimize the braking length of the vehicle, that is the output. The
-time it takes from receiving the input till it produces the output is critical.
-This is due to the fact that the brakes needs to be on instantly. So in fact
-when talking about real time systems, the only concern is whether or not the
-deadlines are met.
+We define a real time system as follows:\nl
+
+\say{A real time system is any information processing system,
+which needs to react within a finite time period to externally generated inputs
+to meet its deadlines
+% Within real time systems there are two important distinctions, namely hard- and soft real
+% time systems. A hard real time system is a system where it is critical to meet
+% deadlines, whereas a soft real time system it is not.
+} \nl
 
 \subsection{Timeliness}
 Timeliness is an important term within real time systems. It is defined as being
 a function of the total system, for example a missile guidance system requires
 the input data within a few milliseconds. This means that for all real time
 systems the concept of timeliness is relative to the project - which makes sense since the only thing
-to care about is whether or not the deadlines are met.
+to care about is whether or not the deadlines are met \Source.
 
 \subsection{Deadlines}
 As mentioned in the definition, real time systems are concerned about
@@ -36,22 +30,37 @@ deadlines in a system.
 The real time system gets classified depending on the consequences of not
 meeting a deadline. If the result of a failed deadline is catastrophic, the
 system gets classified as a hard real time system - examples of such are control
-systems for airplanes, nuclear power plants, etc.
+systems for airplanes, nuclear power plants, etc \Source.
 If an occasional deadline is missed, or the system doesn't shut down if a
 deadline is missed, it might be a soft real time system, for example
 video-conferencing software the result of a missed deadline might be dropped
-frames but nothing critical.
+frames but nothing critical \Source.
 
 \subsection{Tasks}
 A task is a subset of the program. For example a task in the ABS-brake system
 could be ReadVelocity(). In order to construct a schedule first the time to
 process all the different tasks is needed. This provides a overview of all the
-different tasks needed to complete the function and their respective runtime.
+different tasks needed to complete the function and their respective runtime
+\Source.
 
 \subsection{Scheduling}
 To ensure that the deadlines \textbf{always} are met, scheduling is needed.
 By explicitly stating a schedule for the system to follow, a scheduling analysis
 can be conducted in order to ensure that the schedule does in fact always hold
-true and no deadlines are missed. Scheduling is one of the
+true and no deadlines are missed \Source. Scheduling is one of the
 fundamental concepts of RTS. But for scheduling to work, knowledge is needed
-about how long tasks take to finish. 
+about how long tasks take to finish \Source. 
+
+
+% \subsection{An example}
+% An example of a real time system is the ABS-brakes on a car
+
+% At its most basic level, real time systems are systems where the timing of
+% specific parts are a vital factor. Consider the example of an ABS-brake - the
+% system needs an input i.e. a sensor input from the wheels. This information is
+% then used to calculate the correct amount of pressure to apply to the brakes in
+% order to optimize the braking length of the vehicle, that is the output. The
+% time it takes from receiving the input till it produces the output is critical.
+% This is due to the fact that the brakes needs to be on instantly. So in fact
+% when talking about real time systems, the only concern is whether or not the
+% deadlines are met.
